# silver-engine

./: .clang-format  CMakeLists.txt  README.md
cmake/: silverengineConfig.cmake.in  silverengineConfigVersion.cmake
include/: models.h  silverengine.h
src/: models.cpp  silverengine.cpp  silverengine.h
